Pop-ups.html: Added dropdown menus

--- a/pop-ups.html
+++ b/pop-ups.html
@@ -1045,7 +1045,7 @@
 	</div>
 </div>
 
-<div class="one-col">
+<div class="one-col mb50">
 	<!-- ASIGN PRESENTATION MODAL -->
 	<div class="add-collaborator-modal">
 		<button class="dark-gray-close-btn"></button>
@@ -1068,23 +1068,23 @@
 			<p class="c-dark-purple mb20"><strong>Select Team(s)</strong></p>
 			<div class="scroll-content mb20">
 				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
 					<p class="c-dark-purple-opacity"><strong>New Dog Food</strong></p>
 				</div>
 				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
 					<p class="c-dark-purple-opacity"><strong>Social Project</strong></p>
 				</div>
 				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
 					<p class="c-dark-purple-opacity"><strong>Healtcare App</strong></p>
 				</div>
 				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
 					<p class="c-dark-purple-opacity"><strong>Job Finder App</strong></p>
 				</div>
 				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="radio" name="character2" value="customer"><span class="check"></span></div>
+					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
 					<p class="c-dark-purple-opacity"><strong>Tinder for Lawmaking</strong></p>
 				</div>
 			</div>
@@ -1093,6 +1093,30 @@
 	</div>
 </div>
 
+<div class="one-col mb50">
+	<!-- DROPDOWN PURPLE DARK MENU -->
+	<div class="bg-dark-purple dropdown-menu">
+		<ul class="scroll-content-white">
+			<li>New Team</li>
+			<li>My profile</li>
+			<li>Options</li>
+			<li>Logout</li>
+		</ul>
+	</div>
+</div>
+
+<div class="one-col mb50">
+	<!-- DROPDOWN PURPLE DARK MENU -->
+	<div class="bg-soft-orange dropdown-menu">
+		<ul class="scroll-content">
+			<li>New Team</li>
+			<li>New Cohort</li>
+			<li>My profile</li>
+			<li>Options</li>
+			<li>Logout</li>
+		</ul>
+	</div>
+</div>
 
 <!-- LIBRARIES -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
