Pop-ups.html: add cohort modal has been added

--- a/pop-ups.html
+++ b/pop-ups.html
@@ -1118,6 +1118,20 @@
 	</div>
 </div>
 
+<div class="one-col mb50">
+	<!-- ADD NEW COHORT -->
+	<div class="add-new-cohort-modal">
+		<button class="dark-purple-opacity-close-btn"></button>
+		<h2 class="serif">New Cohort</h2>
+		<div class="one-col mb50">
+			<p class="mb20"><strong>Name large name</strong>(optional)</p>
+			<input type="text" class="input-x1" placeholder="Speciality / Event name /  february">
+		</div>
+		<button class="green-btn">Asign</button>
+	</div>
+
+</div>
+
 <!-- LIBRARIES -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/jquery.mCustomScrollbar.min.js"></script>
