Pop-ups: Added new project & asign presentation modal

--- a/pop-ups.html
+++ b/pop-ups.html
@@ -1046,51 +1046,78 @@
 </div>
 
 <div class="one-col mb50">
-	<!-- ASIGN PRESENTATION MODAL -->
-	<div class="add-collaborator-modal">
-		<button class="dark-gray-close-btn"></button>
-		<h2 class="c-dark-purple serif mb20">Asign presentations</h2>
-		<div class="two-col mb20 columns">
-			<p class="c-dark-purple mb20"><strong>Due Date</strong></p>
-			<input type="text" class="input-x1 c-dark-purple" placeholder="1 de Enero 2017">
-		</div>
-		<div class="two-col mb20 columns">
-			<p class="c-dark-purple mb20"><strong>Link to Dropbox</strong></p>
-			<input type="text" class="input-x1 c-dark-purple" placeholder="http://dropbox.com/rickroll">
-		</div>
-		<div class="two-col mb20 columns">
-			<p class="c-dark-purple mb20"><strong>Syllabus theme</strong> (optional)</p>
-			<select class="input-x1">
-				<option value="first">None</option>
-			</select>
-		</div>
-		<div class="one-col">
-			<p class="c-dark-purple mb20"><strong>Select Team(s)</strong></p>
-			<div class="scroll-content mb20">
-				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
-					<p class="c-dark-purple-opacity"><strong>New Dog Food</strong></p>
-				</div>
-				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
-					<p class="c-dark-purple-opacity"><strong>Social Project</strong></p>
-				</div>
-				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
-					<p class="c-dark-purple-opacity"><strong>Healtcare App</strong></p>
-				</div>
-				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
-					<p class="c-dark-purple-opacity"><strong>Job Finder App</strong></p>
-				</div>
-				<div class="one-col mb10">
-					<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
-					<p class="c-dark-purple-opacity"><strong>Tinder for Lawmaking</strong></p>
-				</div>
+	<div class="two-col columns">
+		<!-- ASIGN PRESENTATION MODAL -->
+		<div class="add-collaborator-modal">
+			<button class="dark-gray-close-btn"></button>
+			<h2 class="c-dark-purple serif mb20">Asign presentations</h2>
+			<div class="two-col mb20 columns">
+				<p class="c-dark-purple mb20"><strong>Due Date</strong></p>
+				<input type="text" class="input-x1 c-dark-purple" placeholder="1 de Enero 2017">
 			</div>
-			<button class="green-btn">Asign</button>
+			<div class="two-col mb20 columns">
+				<p class="c-dark-purple mb20"><strong>Link to Dropbox</strong></p>
+				<input type="text" class="input-x1 c-dark-purple" placeholder="http://dropbox.com/rickroll">
+			</div>
+			<div class="two-col mb20 columns">
+				<p class="c-dark-purple mb20"><strong>Syllabus theme</strong> (optional)</p>
+				<select class="input-x1">
+					<option value="first">None</option>
+				</select>
+			</div>
+			<div class="one-col">
+				<p class="c-dark-purple mb20"><strong>Select Team(s)</strong></p>
+				<div class="scroll-content mb20">
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
+						<p class="c-dark-purple-opacity"><strong>New Dog Food</strong></p>
+					</div>
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
+						<p class="c-dark-purple-opacity"><strong>Social Project</strong></p>
+					</div>
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
+						<p class="c-dark-purple-opacity"><strong>Healtcare App</strong></p>
+					</div>
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
+						<p class="c-dark-purple-opacity"><strong>Job Finder App</strong></p>
+					</div>
+					<div class="one-col mb10">
+						<div class="green-radio-input bg-purple-radio-input"><input type="checkbox" name="character2" value="customer"><span class="check"></span></div>
+						<p class="c-dark-purple-opacity"><strong>Tinder for Lawmaking</strong></p>
+					</div>
+				</div>
+				<button class="green-btn">Asign</button>
+			</div>
 		</div>
 	</div>
+	<div class="two-col columns">
+		<!-- ASIGN PRESENTATION: TEAM PREVIOUSLY SELECTED-->
+		<div class="add-collaborator-modal">
+			<button class="dark-purple-opacity-close-btn"></button>
+			<h2 class="serif">Asign presentation to team New Dog Food</h2>
+			<div class="one-col">
+				<div class="half-col columns mb20">
+					<p class="mb20"><strong>Due date</strong></p>
+					<input type="text" class="input-x1" placeholder="3 Jan 2017" value="3 Apr 2017">
+				</div>
+				<div class="half-col columns mb20">
+					<p class="mb20"><strong>Link to Dropbox</strong></p>
+					<input type="text" class="input-x1" placeholder="https://www.dropbox.com/business/">
+				</div>
+				<div class="half-col columns mb50">
+					<p class="mb20"><strong>Syllabus theme</strong> (optional)</p>
+					<select class="input-x1">
+						<option value="first">Value Proposition</option>
+					</select>
+				</div>
+			</div>
+			<button class="green-btn">Invite & create</button>
+		</div>
+	</div>
+
 </div>
 
 <div class="one-col mb50">
@@ -1129,8 +1156,61 @@
 		</div>
 		<button class="green-btn">Asign</button>
 	</div>
-
 </div>
+
+<div class="one-col mb50">
+	<div class="two-col columns">
+		<!-- ADD NEW PROJECT -->
+		<div class="add-new-project-modal">
+			<button class="dark-purple-opacity-close-btn"></button>
+			<h2 class="serif">New Project</h2>
+			<div class="one-col mb20">
+				<p class="mb20"><strong>Name</strong></p>
+				<input type="text" class="input-x1 med-input-x1" placeholder="Idea or Company">
+			</div>
+			<div class="one-col mb20">
+				<p class="mb20"><strong>Brief description</strong></p>
+				<textarea type="text" class="input-x1 med-input-x1" placeholder="More information to help you remember"></textarea>
+			</div>
+			<div class="one-col mb20">
+				<p class="mb20"><strong>People</strong></p>
+				<div class="input-x1 c-dark-purple tags_1"></div>
+			</div>
+			<div class="one-col mb50">
+				<p class="mb20"><strong>Chose another mentor</strong></p>
+				<div class="input-x1 c-dark-purple tags_1"></div>
+			</div>
+			<button class="purple-opacity-border-btn">Invite & create</button>
+		</div>
+	</div>
+	<div class="two-col columns">
+		<!-- ADD NEW PROJECT FILLED -->
+		<div class="add-new-project-modal">
+			<button class="dark-purple-opacity-close-btn"></button>
+			<h2 class="serif">New Project</h2>
+			<div class="one-col mb20">
+				<p class="mb20"><strong>Name</strong></p>
+				<input type="text" class="input-x1 med-input-x1" placeholder="Idea or Company" value="Carrot dog food">
+			</div>
+			<div class="one-col mb20">
+				<p class="mb20"><strong>Brief description</strong></p>
+				<textarea type="text" class="input-x1 med-input-x1" placeholder="More information to help you remember">This team has found dogs have a rich sense for tasting carrots and receive an overall nutritional gain.</textarea>
+			</div>
+			<div class="one-col mb20">
+				<p class="mb20"><strong>People</strong></p>
+				<div class="input-x1 c-dark-purple tags_1"></div>
+			</div>
+			<div class="one-col mb50">
+				<p class="mb20"><strong>Chose another mentor</strong></p>
+				<div class="input-x1 c-dark-purple tags_1"></div>
+			</div>
+			<button class="green-btn">Invite & create</button>
+		</div>
+	</div>
+</div>
+
+
+
 
 <!-- LIBRARIES -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
