:wrench: Fix close button colors

--- a/pop-ups.html
+++ b/pop-ups.html
@@ -977,7 +977,7 @@
 	<div class="two-col">
 		<!-- ADD COLLABORATOR MODAL -->
 		<div class="add-collaborator-modal" style="background-image: url('img/bg-collaborators.png');">
-			<button class="dark-gray-close-btn"></button>
+			<button class="dark-purple-opacity-close-btn"></button>
 			<h2 class="c-dark-purple serif mb20">Add Collaborators to your Canvas</h2>
 			<p class="c-dark-purple mb20"><strong>People</strong></p>
 			<div class="one-col mb20">
@@ -1001,7 +1001,7 @@
 	<div class="two-col">
 		<!-- ADD COLLABORATOR MODAL -->
 		<div class="add-collaborator-modal" style="background-image: url('img/bg-collaborators.png');">
-			<button class="dark-gray-close-btn"></button>
+			<button class="dark-purple-opacity-close-btn"></button>
 			<h2 class="c-dark-purple serif mb20">Add Collaborators to your Canvas</h2>
 			<p class="c-dark-purple mb20"><strong>People</strong></p>
 			<div class="one-col mb20">
@@ -1049,7 +1049,7 @@
 	<div class="two-col columns">
 		<!-- ASIGN PRESENTATION MODAL -->
 		<div class="add-collaborator-modal">
-			<button class="dark-gray-close-btn"></button>
+			<button class="dark-purple-opacity-close-btn"></button>
 			<h2 class="c-dark-purple serif mb20">Asign presentations</h2>
 			<div class="two-col mb20 columns">
 				<p class="c-dark-purple mb20"><strong>Due Date</strong></p>
@@ -1061,7 +1061,7 @@
 			</div>
 			<div class="two-col mb20 columns">
 				<p class="c-dark-purple mb20"><strong>Syllabus theme</strong> (optional)</p>
-				<select class="input-x1">
+				<select class="input-x1 c-dark-purple">
 					<option value="first">None</option>
 				</select>
 			</div>
@@ -1101,15 +1101,15 @@
 			<div class="one-col">
 				<div class="half-col columns mb20">
 					<p class="mb20"><strong>Due date</strong></p>
-					<input type="text" class="input-x1" placeholder="3 Jan 2017" value="3 Apr 2017">
+					<input type="text" class="input-x1 c-dark-purple" placeholder="3 Jan 2017" value="3 Apr 2017">
 				</div>
 				<div class="half-col columns mb20">
 					<p class="mb20"><strong>Link to Dropbox</strong></p>
-					<input type="text" class="input-x1" placeholder="https://www.dropbox.com/business/">
+					<input type="text" class="input-x1 c-dark-purple" placeholder="https://www.dropbox.com/business/">
 				</div>
 				<div class="half-col columns mb50">
 					<p class="mb20"><strong>Syllabus theme</strong> (optional)</p>
-					<select class="input-x1">
+					<select class="input-x1 c-dark-purple">
 						<option value="first">Value Proposition</option>
 					</select>
 				</div>
