Upgrade readme: added link to preview recent-activity.html

--- a/project-single-view.html
+++ b/project-single-view.html
@@ -22,7 +22,8 @@
 				<div class="breadcrumbs">
 					<ul>
 						<li><a href="#"><strong>Spring 2017</strong></a></li>
-						<li><a href="#">Profiles</a></li>
+						<li><a href="#"><strong>New Dog Food</strong></a></li>
+						<li><button class="white-opacity-rounded-btn purple-down-arrow">Week 3</button></li>
 					</ul>
 				</div>
 			</div>
@@ -43,52 +44,70 @@
 		</div>
 	</header>
 
-	<section>
+	<section class="mb20">
 		<div class="wrap">
-			<div class="one-col mb50">
-				<h2 class="serif c-dark-purple">Lorena Parker</h2>
-				<p class="c-dark-purple"><strong>Entrepreneur</strong></p>
+			<div class="two-col columns mb50">
+				<h2 class="serif c-dark-purple">New Dog Food</h2>
+				<p class="c-dark-purple"><strong>About</strong></p>
 			</div>
+			<div class="two-col columns">
+				<button class="med-rounded-btn bg-dark-purple f-right small-btn">Edit</button>
+			</div>
+		</div>
+	</section>
 
+	<section class="mb100">
+		<div class="wrap c-dark-purple">
 			<div class="one-three-col columns">
-				<div class="one-col">
-					<div class="mask-profile">
-						<div class="bg-img" style="background-image: url('img/profile1.png');"></div>
-						<img src="img/profile1.png" alt="Profile Picture">
-					</div>
+				<img src="http://lorempixel.com/output/technics-q-c-640-480-3.jpg" alt="">
+			</div>
+			<div class="short-half-col columns">
+				<div class="content-txt serif">
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc elementum, mauris eget iaculis commodo, sem risus dictum lacus, at pulvinar nulla tortor a odio. Aliquam sed libero vitae justo tristique viverra. Pellentesque tincidunt libero nisl, quis rutrum nibh pharetra sit amet. </p><p>Pulvinar nulla tortor a odio. Aliquam sed libero vitae justo tristique viverra. Pellentesque tincidunt libero nisl, quis rutrum nibh pharetra sit amet. </p>
 				</div>
 			</div>
-
-			<div class="three-col columns">
-				<div class="one-col mb50">
-					<p class="serif c-dark-purple">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc elementum, mauris eget iaculis commodo, sem risus dictum lacus, at pulvinar nulla tortor a odio. Aliquam sed libero vitae justo tristique viverra. Pellentesque tincidunt libero nisl, quis rutrum nibh pharetra sit amet. </p>
+			<div class="one-fourth columns txt14">
+				<div class="one-col mb20">
+					<p>Industry</p>
+					<p><strong>Food</strong></p>
 				</div>
-				<div class="two-col mb50">
-					<p class="txt18 c-dark-purple"><strong>16</strong> hypothesis, <strong>5</strong> invalid, <strong>12</strong> Interviews, <strong>22</strong> comments</p>
+				<div class="one-col mb20">
+					<p>Cohort</p>
+					<p><strong>Spring 2017 (May 12 2016)</strong></p>
 				</div>
-				<div class="one-col mb50">
-					<div class="two-col">
-						<div class="one-col mb30">
-							<p class="txt14 c-dark-purple">Projects</p>
-							<p class="txt14 c-dark-purple"> <strong>New Dog Food</strong></p>
-							<p class="txt14 c-dark-purple"> <strong>Nanotubular</strong></p>
-						</div>
-						<div class="one-col mb30">
-							<p class="txt14 c-dark-purple">Cohorts</p>
-							<p class="txt14 c-dark-purple"> <strong>Spring 2017</strong>(May 12 2016)</p>
-						</div>
+				<div class="one-col mb20">
+					<p>Products / Prototype</p>
+					<p><strong>Low fidelity MVP, High fidelity MVP</strong></p>
+				</div>
+				<div class="one-col mb20">
+					<p>Market</p>
+					<p><strong>Market Size unknown, Total Available: $120 Million</strong></p>
+				</div>
+			</div>
+		</div>
+	</section>
 
-						<div class="one-col mb30">
-							<p class="txt14 c-dark-purple">Contact</p>
-							<p class="txt14 c-dark-purple"> <strong>(81) 3987 1983 </strong></p>
-							<p class="txt14 c-dark-purple"> <strong>(loparker@mail.com </strong></p>
+	<section class="mb100">
+		<div class="wrap">
+			<div class="one-col mb30">
+				<h2 class="serif c-dark-purple">Team members details</h2>
+			</div>
+			<div class="one-col">
+				<div class="profile-details-card bg-dark-purple columns">
+					<div class="top">
+						<div class="profile-btn" style="background-image: url('http://lorempixel.com/output/technics-q-c-640-480-3.jpg');"></div>
+						<div class="txt">
+							<h2><strong>Jerome</strong></h2>
+							<h2>Osborne</h2>
 						</div>
 					</div>
-					<div class="two-col">
-						<p class="txt14 c-dark-purple">Learnt</p>
+					<div class="bottom bg-dark-purple">
+						<div class="one-col mb20">
+							<p><strong>16</strong> hypothesis, <strong>5</strong> invalid, <strong>12</strong> Interviews, <strong>22</strong> comments</p>
+						</div>
 						<div class="one-col mb20">
 							<div class="progress-bar-dots">
-								<p class="txt14 c-dark-purple"><span>S1</span> <strong>Getting to to know the Canvas</strong></p>
+								<p class="txt14 line-clamp-x1"><span>S1</span> <strong>Getting to to know the Canvas</strong></p>
 								<div class="dot bg-green"></div>
 								<div class="dot bg-green"></div>
 								<div class="dot bg-green"></div>
@@ -97,113 +116,258 @@
 						</div>
 						<div class="one-col mb20">
 							<div class="progress-bar-dots">
-								<p class="txt14 c-dark-purple"><span>S2</span> <strong>Getting to to know the Canvas</strong></p>
+								<p class="txt14 line-clamp-x1"><span>S2</span> <strong>Customer Discovery</strong></p>
 								<div class="dot bg-green"></div>
 								<div class="dot bg-green"></div>
-								<div class="dot bg-green"></div>
-								<div class="dot bg-green"></div>
-							</div>
-						</div>
-						<div class="one-col mb20">
-							<div class="progress-bar-dots">
-								<p class="txt14 c-dark-purple"><span>S3</span> <strong>Iterating the Canvas</strong></p>
 								<div class="dot"></div>
-								<div class="dot bg-green"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
 								<div class="dot"></div>
 								<div class="dot"></div>
 							</div>
 						</div>
 						<div class="one-col mb20">
 							<div class="progress-bar-dots">
-								<p class="txt14 c-dark-purple"><span>S4</span> <strong>Getting to to know the Canvas</strong></p>
+								<p class="txt14 line-clamp-x1"><span>S3</span> <strong>Iterating the Canvas</strong></p>
 								<div class="dot bg-green"></div>
 								<div class="dot bg-green"></div>
-								<div class="dot bg-green"></div>
-								<div class="dot bg-green"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
 							</div>
 						</div>
 						<div class="one-col mb20">
 							<div class="progress-bar-dots">
-								<p class="txt14 c-dark-purple"><span>S5</span> <strong>Yoga</strong></p>
+								<p class="txt14 line-clamp-x1"><span>S4</span> <strong>Mindblowing hypothesis</strong></p>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S5</span> <strong>Pivoting Business</strong></p>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S6</span> <strong>Yoga</strong> <span class="c-white-opacity">0/ 4</span></p>
+								<div class="dot"></div>
+								<div class="dot"></div>
 								<div class="dot"></div>
 								<div class="dot"></div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="one-col mb50">
-					<h2 class="serif c-dark-purple mb20">Experience</h2>
-					<div class="two-col columns">
-						<p class="txt14 c-dark-purple">Laboral</p>
-						<p class="txt14 c-dark-purple"><strong>Position or role – Company</strong></p>
-						<p class="txt14 c-dark-purple">2015 -</p>
-						<p class="txt14 c-dark-purple mb20">This is what i did while role description of Company description.</p>
-
-						<p class="txt14 c-dark-purple"><strong>Second role – Medium </strong></p>
-						<p class="txt14 c-dark-purple">2011 – 2015</p>
-						<p class="txt14 c-dark-purple mb20">This is what i did while role description of Company description.</p>
-
-						<p class="txt14 c-dark-purple">Education</p>
-						<p class="txt14 c-dark-purple"><strong>Ph D Industrial Arts – São Camilo University Center</strong></p>
-						<p class="txt14 c-dark-purple">2011 – 2015</p>
+				<div class="profile-details-card bg-dark-purple columns">
+					<div class="top">
+						<div class="profile-btn" style="background-image: url('http://lorempixel.com/output/technics-q-c-640-480-3.jpg');"></div>
+						<div class="txt">
+							<h2><strong>Rena</strong></h2>
+							<h2>Neal</h2>
+						</div>
 					</div>
-					<div class="two-col columns">
-						<p class="txt14 c-dark-purple"><strong>Joint Masters in Public Administration & Masters in International Education Management – MIDDLEBURY INSTITUTE OF INTERNATIONAL STUDIES AT MONTEREY</strong></p>
-						<p class="txt14 mb20">2008 - 2011</p>
-
-						<p class="txt14 c-dark-purple mb20"><strong>Management Program – PEKING UNIVERSITY HSBC BUSINESS SCHOOL (PHBS)</strong></p>
-
-						<p class="txt14 c-dark-purple">Languages</p>
-						<p class="txt14 c-dark-purple"><strong>Spanish</strong></p>
-						<p class="txt14 c-dark-purple"><strong>English</strong></p>
+					<div class="bottom bg-dark-purple">
+						<div class="one-col mb20">
+							<p><strong>16</strong> hypothesis, <strong>5</strong> invalid, <strong>12</strong> Interviews, <strong>22</strong> comments</p>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S1</span> <strong>Getting to to know the Canvas</strong></p>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S2</span> <strong>Customer Discovery</strong></p>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S3</span> <strong>Iterating the Canvas</strong></p>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S4</span> <strong>Mindblowing hypothesis</strong></p>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S5</span> <strong>Pivoting Business</strong></p>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S6</span> <strong>Yoga</strong> <span class="c-white-opacity">0/ 4</span></p>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="one-col mb50">
-					<h2 class="serif c-dark-purple mb20">Skills</h2>
-					<div class="two-col columns">
-						<p class="txt14 c-dark-purple mb10">WEF, Skills 2020</p>
-						<p class="txt14 c-dark-purple"><strong>Active learning</strong></p>
-						<div class="progress-bar-x1 mb20">
-							<div class="bg-green" style="width: 96%;"></div>
-						</div>
-						<p class="txt14 c-dark-purple"><strong>Coordinating with others</strong></p>
-						<div class="progress-bar-x1 mb20">
-							<div class="bg-green" style="width: 70%;"></div>
-						</div>
-						<p class="txt14 c-dark-purple"><strong>Technology and User Experience Design</strong></p>
-						<div class="progress-bar-x1 mb20">
-							<div class="bg-green" style="width: 30%; opacity: 0.3;"></div>
-						</div>
-						<p class="txt14 c-dark-purple"><strong>Judgement and Decision-Making</strong></p>
-						<div class="progress-bar-x1 mb20">
-							<div class="bg-green" style="width: 90%;"></div>
-						</div>
-						<p class="txt14 c-dark-purple"><strong>Manual Dexterity and Precision</strong></p>
-						<div class="progress-bar-x1 mb20">
-							<div class="bg-green" style="width: 50%; opacity:0.5;"></div>
+				<div class="profile-details-card bg-dark-purple columns">
+					<div class="top">
+						<div class="profile-btn" style="background-image: url('http://lorempixel.com/output/technics-q-c-640-480-3.jpg');"></div>
+						<div class="txt">
+							<h2><strong>Edna</strong></h2>
+							<h2>Shelton</h2>
 						</div>
 					</div>
-					<div class="two-col columns">
-						<p class="txt14 c-dark-purple mb10">Secondary Skills</p>
-						<p class="txt14 c-dark-purple mb10"><strong>Secondary Skills</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Cargo Handling</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Chemicals & Specialty Materials</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>CleanTech</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Communications</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Computer</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Construction</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Consulting</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Consumer & Industrial Products</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Consumer Products</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Department Stores</strong></p>
-						<p class="txt14 c-dark-purple mb10"><strong>Education</strong></p>
+					<div class="bottom bg-dark-purple">
+						<div class="one-col mb20">
+							<p><strong>16</strong> hypothesis, <strong>5</strong> invalid, <strong>12</strong> Interviews, <strong>22</strong> comments</p>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S1</span> <strong>Getting to to know the Canvas</strong></p>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S2</span> <strong>Customer Discovery</strong></p>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S3</span> <strong>Iterating the Canvas</strong></p>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S4</span> <strong>Mindblowing hypothesis</strong></p>
+								<div class="dot bg-green"></div>
+								<div class="dot bg-green"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S5</span> <strong>Pivoting Business</strong></p>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
+						<div class="one-col mb20">
+							<div class="progress-bar-dots">
+								<p class="txt14 line-clamp-x1"><span>S6</span> <strong>Yoga</strong> <span class="c-white-opacity">0/ 4</span></p>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+								<div class="dot"></div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
 
-
+	<section class="mb100">
+		<div class="wrap">
+			<div class="one-col mb30">
+				<h2 class="serif c-dark-purple">Team mentors details</h2>
+			</div>
+			<div class="one-col">
+				<div class="profile-details-card bg-soft-orange columns">
+					<div class="top">
+						<div class="profile-btn" style="background-image: url('http://lorempixel.com/output/technics-q-c-640-480-3.jpg');"></div>
+						<div class="txt">
+							<h2><strong>Ray</strong></h2>
+							<h2>Reid</h2>
+						</div>
+					</div>
+					<div class="bottom bg-soft-orange">
+						<div class="one-col mb20">
+							<p><strong>2</strong> revisions, <strong>2 </strong> comments</p>
+						</div>
+					</div>
+				</div>
+				<div class="profile-details-card bg-soft-orange columns">
+					<div class="top">
+						<div class="profile-btn" style="background-image: url('http://lorempixel.com/output/technics-q-c-640-480-3.jpg');"></div>
+						<div class="txt">
+							<h2><strong>Sofia</strong></h2>
+							<h2>Weaver</h2>
+						</div>
+					</div>
+					<div class="bottom bg-soft-orange">
+						<div class="one-col mb20">
+							<p><strong>2</strong> revisions, <strong>2 </strong> comments</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 </div>
 
