pop-ups: added valid/ invalid input

--- a/pop-ups.html
+++ b/pop-ups.html
@@ -1438,7 +1438,20 @@
 	</div>
 </div>
 
-
+<div class="one-col mb50">
+	<div class="add-new-cohort-modal">
+		<div class="one-col columns mb20">
+			<p class="mb20"><strong>Due date</strong></p>
+			<input type="text" class="input-x1 input success c-dark-purple" placeholder="3 Jan 2017" value="3 Apr 2017">
+			<p class="help success">This email is available.</p>
+		</div>
+		<div class="one-col columns mb20">
+			<p class="mb20"><strong>Link to Dropbox</strong></p>
+			<input type="text" class="input-x1 input invalid c-dark-purple" placeholder="https://www.dropbox.com/business/">
+			<p class="help invalid">This email is invalid.</p>
+		</div>
+	</div>
+</div>
 
 
 <!-- LIBRARIES -->
